--- a/micat/package.json
+++ b/micat/package.json
@@ -21,6 +21,7 @@
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.3.2",
+    "@tailwindcss/forms": "^0.5.5",
     "@tsconfig/node18": "^18.2.0",
     "@types/jsdom": "^21.1.1",
     "@types/node": "^18.17.5",
@@ -30,14 +31,17 @@
     "@vue/eslint-config-typescript": "^11.0.3",
     "@vue/test-utils": "^2.4.1",
     "@vue/tsconfig": "^0.4.0",
+    "autoprefixer": "^10.4.15",
     "cypress": "^12.17.4",
     "eslint": "^8.46.0",
     "eslint-plugin-cypress": "^2.14.0",
     "eslint-plugin-vue": "^9.16.1",
     "jsdom": "^22.1.0",
     "npm-run-all": "^4.1.5",
+    "postcss": "^8.4.28",
     "prettier": "^3.0.0",
     "start-server-and-test": "^2.0.0",
+    "tailwindcss": "^3.3.3",
     "typescript": "~5.1.6",
     "vite": "^4.4.9",
     "vitest": "^0.34.2",
