--- a/.github/workflows/build_and_deploy.yml
+++ b/.github/workflows/build_and_deploy.yml
@@ -30,11 +30,13 @@ jobs:
       with:
         node-version: '19.x'
     - name: install node.js dependencies
-      run: cd micat
-      run: npm install
+      run: |
+        cd micat
+        npm install
     - name: build
-      run: cd micat
-      run: npm run build --if-present
+      run: |
+        cd micat
+        npm run build --if-present
     - name: deploy
       uses: easingthemes/ssh-deploy@main
       with:
