--- a/micat/package.json
+++ b/micat/package.json
@@ -18,8 +18,10 @@
     "@headlessui/vue": "^1.7.16",
     "@heroicons/vue": "^2.0.18",
     "@vueuse/core": "^10.4.1",
+    "chart.js": "^4.4.0",
     "pinia": "^2.1.6",
     "vue": "^3.3.4",
+    "vue-chartjs": "^5.2.0",
     "vue-router": "^4.2.4"
   },
   "devDependencies": {
