fixed local path #2

--- a/.github/workflows/build_and_deploy.yml
+++ b/.github/workflows/build_and_deploy.yml
@@ -43,7 +43,7 @@ jobs:
             username: ${{ secrets.SFTP_USER }}
             server: ${{ secrets.SFTP_URL }}
             port: ${{ secrets.SFTP_PORT }}
-            local_path: '.micat/dist/*'
+            local_path: './micat/dist/*'
             remote_path: '.'
             sftp_only: true
             password: ${{ secrets.SFTP_PASSWORD }}
