--- a/.github/workflows/build_and_deploy.yml
+++ b/.github/workflows/build_and_deploy.yml
@@ -38,11 +38,12 @@ jobs:
         cd micat
         npm run build --if-present
     - name: deploy
-      uses: SamKirkland/FTP-Deploy-Action@3.1.1
+      uses: SamKirkland/FTP-Deploy-Action@v4.3.4
       with:
-        ftp-server: ${{ secrets.SFTP_URL }}
-        ftp-port: ${{ secrets.SFTP_PORT }}
-        ftp-username: ${{ secrets.SFTP_USER }}
-        ftp-password: ${{ secrets.SFTP_PASSWORD }}
-        local-dir: micat/dist
+        server: ${{ secrets.SFTP_URL }}
+        port: ${{ secrets.SFTP_PORT }}
+        protocol: ftps
+        username: ${{ secrets.SFTP_USER }}
+        password: ${{ secrets.SFTP_PASSWORD }}
+        local-dir: ./micat/dist/
 
