--- a/.github/workflows/build_and_deploy.yml
+++ b/.github/workflows/build_and_deploy.yml
@@ -41,7 +41,7 @@ jobs:
       uses: wlixcc/SFTP-Deploy-Action@v1.2.4
       with:
         username: ${{ secrets.SFTP_USER }}
-        server: ${{ secrets.SFTP_SERVER }}
+        server: ${{ secrets.SFTP_URL }}
         port: ${{ secrets.SFTP_PORT }}
         local_path: './micat/dist/*'
         remote_path: './foo/'   
