trying to fix local dir #2

--- a/.github/workflows/build_and_deploy.yml
+++ b/.github/workflows/build_and_deploy.yml
@@ -43,4 +43,4 @@ jobs:
         server: ${{ secrets.SFTP_URL }}
         username: ${{ secrets.SFTP_USER }}
         password: ${{ secrets.SFTP_PASSWORD }}
-        local-dir: micat/dist
+        local-dir: micat/dist/
