--- a/.github/workflows/build_and_deploy.yml
+++ b/.github/workflows/build_and_deploy.yml
@@ -42,6 +42,7 @@ jobs:
       with:
         server: ${{ secrets.SFTP_URL }}
         port: 22
+        timeout: 60000
         username: ${{ secrets.SFTP_USER }}
         password: ${{ secrets.SFTP_PASSWORD }}
         local-dir: micat/dist/
