--- a/.github/workflows/build_and_deploy.yml
+++ b/.github/workflows/build_and_deploy.yml
@@ -41,7 +41,8 @@ jobs:
       uses: SamKirkland/FTP-Deploy-Action@3.1.1
       with:
         ftp-server: ${{ secrets.SFTP_URL }}
+        ftp-port: 22
         ftp-username: ${{ secrets.SFTP_USER }}
-        ftp-password: ${{ secrets.SFTP_PASSWORD }}
+        ftp-password: ${{ secrets.SFTP_PASSWORD }}        
         local-dir: micat/dist/
         
