--- a/.github/workflows/build_and_deploy.yml
+++ b/.github/workflows/build_and_deploy.yml
@@ -40,9 +40,9 @@ jobs:
     - name: deploy
       uses: SamKirkland/FTP-Deploy-Action@4.0.0
       with:
-        ftp-server: ${{ secrets.SFTP_URL }}
-        ftp-port: 22
-        ftp-username: ${{ secrets.SFTP_USER }}
-        ftp-password: ${{ secrets.SFTP_PASSWORD }}        
+        server: ${{ secrets.SFTP_URL }}
+        port: 22
+        username: ${{ secrets.SFTP_USER }}
+        password: ${{ secrets.SFTP_PASSWORD }}        
         local-dir: micat/dist/
         
