--- a/.github/workflows/build_and_deploy.yml
+++ b/.github/workflows/build_and_deploy.yml
@@ -38,12 +38,21 @@ jobs:
         cd micat
         npm run build --if-present
     - name: deploy
-      uses: SamKirkland/FTP-Deploy-Action@4.0.0
-      with:
-        server: ${{ secrets.SFTP_URL }}
-        port: 22
-        username: ${{ secrets.SFTP_USER }}
-        password: ${{ secrets.SFTP_PASSWORD }}        
-        local-dir: micat/dist/
-        timeout: 100000
+      uses: pressidium/lftp-mirror-action@v1
+        with:
+          # SFTP credentials
+          # sshpass -p <password> sftp user@host
+          host: ${{ secrets.SFTP_URL }}
+          port: ${{ secrets.SFTP_PORT }}
+          user: ${{ secrets.SFTP_USER }}
+          pass: ${{ secrets.SFTP_PASSWORD }}
+          # lftp settings
+          #onlyNewer: true
+          #settings: 'sftp:auto-confirm=yes'
+          # Mirror command options
+          localDir: './micat/dist'
+          #remoteDir: '.' #/var/www/html/example.com/public'
+          reverse: true
+          #ignoreFile: '.lftp_ignore'
+          options: '--verbose'
         
