trying to fix remote dir #2

--- a/.github/workflows/build_and_deploy.yml
+++ b/.github/workflows/build_and_deploy.yml
@@ -51,7 +51,7 @@ jobs:
         #settings: 'sftp:auto-confirm=yes'
         # Mirror command options
         localDir: './micat/dist'
-        #remoteDir: '.' #/var/www/html/example.com/public'
+        remoteDir: '.' #/var/www/html/example.com/public'
         reverse: true
         #ignoreFile: '.lftp_ignore'
         options: '--verbose'
