--- a/micat/package.json
+++ b/micat/package.json
@@ -19,6 +19,7 @@
     "@heroicons/vue": "^2.0.18",
     "@vueuse/core": "^10.4.1",
     "chart.js": "^4.4.0",
+    "chartjs-plugin-annotation": "^3.0.1",
     "pinia": "^2.1.6",
     "vue": "^3.3.4",
     "vue-chartjs": "^5.2.0",
