preparing micat-vue for publication added some workflows added some dependencies applied reuse annotations #28

--- a/.github/workflows/build_and_deploy.yml
+++ b/.github/workflows/build_and_deploy.yml
@@ -1,7 +1,6 @@
-# © 2023 Fraunhofer-Gesellschaft e.V., München
+# © 2023 - 2024 Fraunhofer-Gesellschaft e.V., München
 #
 # SPDX-License-Identifier: AGPL-3.0-or-later
-
 
 # generate key pair on server with
 # ssh-keygen -m PEM -t rsa -b 4096
