--- a/micat/.env.sample
+++ b/micat/.env.sample
@@ -1,1 +1,4 @@
-VITE_API_URL=https://micatool-dev.eu/
+# © 2024 Fraunhofer-Gesellschaft e.V., München
+#
+# SPDX-License-Identifier: AGPL-3.0-or-later
+VITE_API_URL=http://localhost:5000/
