--- a/micat/package.json
+++ b/micat/package.json
@@ -6,6 +6,7 @@
     "dev": "vite",
     "build": "run-p type-check build-only",
     "preview": "vite preview",
+    "coverage": "vitest run --coverage",
     "test:unit": "vitest",
     "test:e2e": "start-server-and-test preview http://localhost:4173 'cypress run --e2e'",
     "test:e2e:dev": "start-server-and-test 'vite dev --port 4173' http://localhost:4173 'cypress open --e2e'",
@@ -31,8 +32,9 @@
     "@tsconfig/node18": "^18.2.0",
     "@types/jsdom": "^21.1.1",
     "@types/node": "^18.17.5",
-    "@vitejs/plugin-vue": "^4.3.1",
-    "@vitejs/plugin-vue-jsx": "^3.0.2",
+    "@vitejs/plugin-vue": "5.0.3",
+    "@vitejs/plugin-vue-jsx": "3.1.0",
+    "@vitest/coverage-v8": "1.2.1",
     "@vue/eslint-config-prettier": "^8.0.0",
     "@vue/eslint-config-typescript": "^11.0.3",
     "@vue/test-utils": "^2.4.1",
@@ -49,8 +51,9 @@
     "start-server-and-test": "^2.0.0",
     "tailwindcss": "^3.3.3",
     "typescript": "~5.1.6",
-    "vite": "^4.4.9",
-    "vitest": "^0.34.2",
-    "vue-tsc": "^1.8.8"
+    "vite": "5.0.11",
+    "vitest": "1.2.1",
+    "vue-tsc": "^1.8.8",
+    "license-checker": "25.0.1"
   }
 }
