--- a/micat/.env.sample
+++ b/micat/.env.sample
@@ -1,4 +1,4 @@
 # © 2024 Fraunhofer-Gesellschaft e.V., München
 #
 # SPDX-License-Identifier: AGPL-3.0-or-later
-VITE_API_URL=http://localhost:5000/
+VITE_API_URL=https://micatool-dev.eu/  # http://localhost:5000/
