--- a/.github/workflows/third_party_license_file_generation.yml
+++ b/.github/workflows/third_party_license_file_generation.yml
@@ -22,6 +22,7 @@ jobs:
     - name: install dependencies
       run: |       
         npx next telemetry disable
+        cd micat
         npm install
     - name: third party license file generation
       run: |
