--- a/micat/package.json
+++ b/micat/package.json
@@ -40,7 +40,7 @@
     "@vue/eslint-config-prettier": "^8.0.0",
     "@vue/eslint-config-typescript": "^11.0.3",
     "@vue/test-utils": "^2.4.1",
-    "@vue/tsconfig": "^0.4.0",
+    "@vue/tsconfig": "^0.4.0",    
     "autoprefixer": "^10.4.15",
     "cypress": "^12.17.4",
     "eslint": "^8.46.0",
@@ -57,5 +57,8 @@
     "vitest": "1.2.1",
     "vue-tsc": "^1.8.8",
     "license-checker": "25.0.1"
+  },
+  "optionalDependencies": {
+    "@rollup/rollup-linux-x64-gnu": "4.9.5" 
   }
 }
