--- a/micat/package.json
+++ b/micat/package.json
@@ -8,7 +8,7 @@
     "build": "run-p type-check build-only",
     "preview": "vite preview",
     "license-check": "node check/check_licenses.js",
-    "coverage": "vitest run --coverage --coverage.reporter='text-summary'",
+    "coverage": "vitest run --coverage.enabled --coverage.reporter='text-summary'",
     "test:unit": "vitest",
     "test:e2e": "start-server-and-test preview http://localhost:4173 'cypress run --e2e'",
     "test:e2e:dev": "start-server-and-test 'vite dev --port 4173' http://localhost:4173 'cypress open --e2e'",
