--- a/.github/workflows/renovate.yml
+++ b/.github/workflows/renovate.yml
@@ -20,8 +20,10 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3.5.3
-      - name: Self-hosted Renovate
-        uses: renovatebot/github-action@v39.0.1
-        with:
-          token: ${{ secrets.RENOVATE_TOKEN }}
-          configurationFile: renovate-config.js
+      # currently disabled due to issues with newer versions
+      
+      #- name: Self-hosted Renovate
+      #  uses: renovatebot/github-action@v39.0.1
+      #  with:
+      #    token: ${{ secrets.RENOVATE_TOKEN }}
+      #    configurationFile: renovate-config.js
