--- a/micat/package.json
+++ b/micat/package.json
@@ -1,14 +1,11 @@
 {
-  "name": "micat-vue",
-  "version": "0.0.1",
-  "license": "AGPL-3.0-or-later",
+  "name": "micat",
+  "version": "0.0.0",
   "private": true,
   "scripts": {
     "dev": "vite",
     "build": "run-p type-check build-only",
     "preview": "vite preview",
-    "license-check": "node check/check_licenses.js",
-    "coverage": "vitest run --coverage --coverage.reporter='text-summary'",
     "test:unit": "vitest",
     "test:e2e": "start-server-and-test preview http://localhost:4173 'cypress run --e2e'",
     "test:e2e:dev": "start-server-and-test 'vite dev --port 4173' http://localhost:4173 'cypress open --e2e'",
@@ -34,13 +31,12 @@
     "@tsconfig/node18": "^18.2.0",
     "@types/jsdom": "^21.1.1",
     "@types/node": "^18.17.5",
-    "@vitejs/plugin-vue": "5.0.3",
-    "@vitejs/plugin-vue-jsx": "3.1.0",
-    "@vitest/coverage-v8": "1.2.1",
+    "@vitejs/plugin-vue": "^4.3.1",
+    "@vitejs/plugin-vue-jsx": "^3.0.2",
     "@vue/eslint-config-prettier": "^8.0.0",
     "@vue/eslint-config-typescript": "^11.0.3",
     "@vue/test-utils": "^2.4.1",
-    "@vue/tsconfig": "^0.4.0",    
+    "@vue/tsconfig": "^0.4.0",
     "autoprefixer": "^10.4.15",
     "cypress": "^12.17.4",
     "eslint": "^8.46.0",
@@ -53,12 +49,8 @@
     "start-server-and-test": "^2.0.0",
     "tailwindcss": "^3.3.3",
     "typescript": "~5.1.6",
-    "vite": "5.0.11",
-    "vitest": "1.2.1",
-    "vue-tsc": "^1.8.8",
-    "license-checker": "25.0.1"
-  },
-  "optionalDependencies": {
-    "@rollup/rollup-linux-x64-gnu": "4.9.5" 
+    "vite": "^4.4.9",
+    "vitest": "^0.34.2",
+    "vue-tsc": "^1.8.8"
   }
 }
