--- a/.github/workflows/build_and_deploy.yml
+++ b/.github/workflows/build_and_deploy.yml
@@ -26,10 +26,11 @@ jobs:
     steps:
       - name: checkout
         uses: actions/checkout@v4
-      - name: install node.js
-        uses: actions/setup-node@v4
+      - name: extract node version
+        uses: ./.github/actions/extract-node-version
+      - uses: actions/setup-node@v4
         with:
-          node-version: "19.x"
+          node-version: ${{ env.NODE_VERSION }}
       - name: install node.js dependencies
         run: |
           cd micat
