--- a/.github/workflows/third_party_license_file_generation.yml
+++ b/.github/workflows/third_party_license_file_generation.yml
@@ -15,10 +15,11 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
-    - name: set up node
-      uses: actions/setup-node@v4
+    - name: extract node version
+      uses: ./.github/actions/extract-node-version
+    - uses: actions/setup-node@v4
       with:
-        node-version: 21
+        node-version: ${{ env.NODE_VERSION }}
     - name: install dependencies
       run: |       
         npx next telemetry disable
