--- a/micat/package.json
+++ b/micat/package.json
@@ -2,6 +2,9 @@
   "name": "micat",
   "version": "0.0.0",
   "private": true,
+  "engines": {
+    "node": "21.7.3"
+  },
   "scripts": {
     "dev": "vite",
     "build": "run-p type-check build-only",
