--- a/micat/package.json
+++ b/micat/package.json
@@ -23,7 +23,9 @@
     "@heroicons/vue": "^2.0.18",
     "@vueuse/core": "^10.4.1",
     "chart.js": "^4.4.0",
+    "chartjs-adapter-date-fns": "^3.0.0",
     "chartjs-plugin-annotation": "^3.0.1",
+    "date-fns": "^3.6.0",
     "pinia": "^2.1.6",
     "vue": "^3.3.4",
     "vue-chartjs": "^5.2.0",
