--- a/micat/package.json
+++ b/micat/package.json
@@ -29,6 +29,7 @@
     "pinia": "^2.1.6",
     "vue": "^3.3.4",
     "vue-chartjs": "^5.2.0",
+    "vue-number-format": "^1.3.1",
     "vue-router": "^4.2.4"
   },
   "devDependencies": {
