--- a/micat/.env.sample
+++ b/micat/.env.sample
@@ -1,4 +1,7 @@
 # © 2024 Fraunhofer-Gesellschaft e.V., München
 #
 # SPDX-License-Identifier: AGPL-3.0-or-later
-VITE_API_URL=https://micatool-dev.eu/  # http://localhost:5000/
+VITE_API_URL=https://micatool-dev.eu/
+VITE_MURE_API_URL=https://www.measures.odyssee-mure.eu/api/
+VITE_MURE_PASSWORD=set
+VITE_MURE_USERNAME=set
