--- a/micat/package.json
+++ b/micat/package.json
@@ -25,6 +25,7 @@
     "chart.js": "^4.4.0",
     "chartjs-adapter-date-fns": "^3.0.0",
     "chartjs-plugin-annotation": "^3.0.1",
+    "chartjs-plugin-datalabels": "^2.2.0",
     "date-fns": "^3.6.0",
     "pinia": "^2.1.6",
     "vue": "^3.3.4",
