fix: updated MURE credentials

--- a/micat/.env.production
+++ b/micat/.env.production
@@ -3,5 +3,5 @@
 # SPDX-License-Identifier: AGPL-3.0-or-later
 VITE_API_URL=https://micatool-dev.eu/
 VITE_MURE_API_URL=https://www.measures.odyssee-mure.eu/api/
-VITE_MURE_PASSWORD=+}6QyG6S-)]9Kvc
+VITE_MURE_PASSWORD=)5H5d?um.+;;Tme
 VITE_MURE_USERNAME=tobias.lorenz@bitlabstudio.com
