--- a/.github/workflows/build_and_deploy.yml
+++ b/.github/workflows/build_and_deploy.yml
@@ -34,7 +34,7 @@ jobs:
       - name: install node.js dependencies
         run: |
           cd micat
-          npm install
+          npm ci
       - name: build
         run: |
           cd micat
