--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -24,7 +24,7 @@ jobs:
         run: |
           npx next telemetry disable
           cd micat
-          npm ci
+          npm i
       - name: test
         run: |
           cd micat
