--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -24,7 +24,7 @@ jobs:
         run: |
           npx next telemetry disable
           cd micat
-          npm ci
+          npm i
       - name: lint
         run: |
           cd micat
